<resources>
    <string name="app_name">NWF Children App</string>
    <string name="email_id">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="region">Region</string>
    <string name="submit_details">Submit Details</string>
    <string name="already_have_account">Already have account?</string>
    <string name="career_name">Career Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dashboard">Dashboard</string>
    <string name="important_contact">Important contact</string>
    <string name="important_phone_number">Important Phone Numbers</string>
    <string name="consultations">Consultations</string>
    <string name="handbook">Children\'s Handbooks </string>
    <string name="resource_library">Interesting stuff</string>
    <string name="trainings">Watch &amp; Learn</string>
    <string name="contact_us">Contact us</string>
    <string name="videos">Videos</string>
    <string name="cypc">CYPC</string>
    <string name="publications">Publications</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="subject">Subject</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="type_here">Type Here</string>
    <string name="no_data_found">No Data Found...</string>
    <string name="contact_note">Care leavers can continue to be in touch with us through this contact form.</string>
    <string name="select_your_language">Choose Your Language</string>
    <string name="language">Language</string>
</resources>