<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_24sdp"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/app_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/rsFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                style="@style/EditTextCustomStyle"
                android:autofillHints="emailAddress" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_4sdp"
                android:backgroundTint="@color/black"
                android:background="@null">

                <TextView
                    android:id="@+id/rsGender"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/rsGender"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@null"
                    app:tint="@color/gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:background="@color/gray_line"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_4sdp"
                android:backgroundTint="@color/black"
                android:background="@null">

                <TextView
                    android:id="@+id/rsDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    style="@style/EditTextCustomStyle"
                    android:autofillHints="emailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/rsDob"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@null"
                    app:tint="@color/gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:background="@color/gray_line"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:backgroundTint="@color/black"
                android:background="@null">

                <TextView
                    android:id="@+id/rsRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:hint="@string/region"
                    style="@style/EditTextCustomStyle"
                    android:autofillHints="emailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/rsRegion"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@null"
                    app:tint="@color/gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:background="@color/gray_line"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:backgroundTint="@color/black"
                android:background="@null">

                <TextView
                    android:id="@+id/rsCareer"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/career_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/rsCareer"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@null"
                    app:tint="@color/gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:background="@color/gray_line"/>


            <Button
                android:id="@+id/rsSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="center"
                style="@style/CustomButtonStyle"
                android:text="@string/submit_details"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_60sdp"/>

            <TextView
                android:id="@+id/rsLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11ssp"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:text="@string/already_have_account"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
