<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_700"
    tools:context=".ui.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_24sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/app_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_40sdp"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/lsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                style="@style/EditTextCustomStyle"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_light" />

            <EditText
                android:id="@+id/lsPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLength="12"
                style="@style/EditTextCustomStyle"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_light" />

            <EditText
                android:id="@+id/lsEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray_light"
                android:textColor="@color/white"
                style="@style/EditTextCustomStyle"
                android:autofillHints="emailAddress" />

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/_60sdp"-->
<!--                android:gravity="center"-->
<!--                android:layout_marginTop="@dimen/_12sdp"-->
<!--                android:orientation="horizontal">-->

<!--                <FrameLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="2">-->

<!--                    <TextView-->
<!--                        android:id="@+id/capchaHint"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center"-->
<!--                        android:fontFamily="@font/poppins_light"-->
<!--                        android:textStyle="bold"-->
<!--                        android:background="@drawable/white_bg"-->
<!--                        android:letterSpacing=".2"-->
<!--                        android:padding="@dimen/_8sdp"-->
<!--                        android:textSize="@dimen/_15ssp"-->
<!--                        android:textColor="@color/black"/>-->

<!--                    <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="1dp"-->
<!--                        android:layout_marginHorizontal="@dimen/_8sdp"-->
<!--                        android:background="@color/gray_text"-->
<!--                        android:layout_gravity="center"/>-->

<!--                </FrameLayout>-->

<!--                <EditText-->
<!--                    android:id="@+id/captchaText"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="3"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Enter Captcha"-->
<!--                    android:background="@drawable/gray_bg"-->
<!--                    android:padding="@dimen/_10sdp"-->
<!--                    android:gravity="center"-->
<!--                    android:layout_marginStart="@dimen/_12sdp"-->
<!--                    android:inputType="textCapWords"-->
<!--                    android:textSize="@dimen/_13ssp"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textColorHint="@color/gray_text" />-->

<!--            </LinearLayout>-->

            <TextView
                android:id="@+id/lsForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins_light"
                android:textStyle="bold"
                android:visibility="gone"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/_16sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_44sdp"
                android:background="@drawable/border_bg"
                android:orientation="vertical">

                <Button
                    android:id="@+id/lsLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/lsSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:text="@string/don_t_have_an_account"
        android:layout_gravity="center"/>

</LinearLayout>
