<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.ContactUsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/gray_box">

                <ImageView
                    android:id="@+id/fcBanner"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/fcTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:elevation="@dimen/_1sdp"
                    android:textSize="@dimen/_16ssp"
                    android:paddingHorizontal="@dimen/_24sdp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textColor="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <EditText
                    android:id="@+id/fcName"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/fcEmail"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/fcSubject"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/subject"
                    android:inputType="textEmailAddress" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="-6dp"
                    android:visibility="gone"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:background="@color/gray_line"/>

<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:backgroundTint="@color/black"-->
<!--                    android:background="@null">-->

<!--                    <TextView-->
<!--                        android:id="@+id/fcSubject"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:paddingHorizontal="@dimen/_2sdp"-->
<!--                        android:hint="@string/subject"-->
<!--                        style="@style/EditTextCustomStyle"-->
<!--                        android:autofillHints="emailAddress"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent" />-->

<!--                    <ImageView-->
<!--                        android:layout_width="@dimen/_8sdp"-->
<!--                        android:layout_height="@dimen/_8sdp"-->
<!--                        android:src="@drawable/ic_arrow_down"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginEnd="@dimen/_8sdp"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="@+id/fcSubject"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        android:contentDescription="@null"-->
<!--                        app:tint="@color/gray" />-->
<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="-6dp"
                    android:visibility="gone"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:background="@color/gray_line"/>


                <EditText
                    android:id="@+id/fcMessage"
                    style="@style/EditTextCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_message"
                    android:minLines="2"
                    android:maxLines="3"
                    android:gravity="start"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/capchaHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:textStyle="bold"
                        android:background="@drawable/white_bg"
                        android:letterSpacing=".2"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/white"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:background="@color/gray_text"
                        android:layout_gravity="center"/>

                </FrameLayout>

                <EditText
                    android:id="@+id/captchaText"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="Enter Captcha"
                    android:background="@drawable/gray_bg"
                    android:padding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_text" />

            </LinearLayout>

            <Button
                android:id="@+id/fcSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="center"
                style="@style/CustomButtonStyle"
                android:text="@string/submit_details"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/fcDetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/contact_note"
                android:gravity="left"
                android:textSize="@dimen/_10ssp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:paddingHorizontal="@dimen/_24sdp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>